# xjbutil

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
resc/: http_404.html  http_500.html
src/: async_utils.rs  defer.rs  display2.rs  either.rs  fat_ptr.rs  flex.rs  http_commons.rs  korobka.rs  lib.rs  liberty.rs  makro.rs  mem_intern.rs  minhttpd.rs  rand_intern.rs  slice_arena.rs  std_ext.rs  typed_arena.rs  unchecked.rs  unchecked_intern.rs  value.rs  void.rs  wide_ptr.rs  zvec.rs
src/async_utils/: pollster_utils.rs
