[package]
name = "xjbutil"
version = "0.2.1"
edition = "2018"
authors = ["ICEY <icey@icey.tech>"]
description = "A xjbly created utility library for my own use"
readme = "./README.md"
repository = "https://github.com/Pr47/xjbutil"
license = "MIT"
resolver = "2"

[dependencies]
unchecked_unwrap = "3"

async-std = { optional = true, version = "1" }
futures = { optional = true, version = "0.3" }
pollster = { optional = true, version = "0.2" }
tokio = { optional = true, version = "1", features = ["rt", "sync", "time"] }

[features]
default = ["enable-all", "async-tokio"]

enable-all = [
    "async",
    "defer",
    "either",
    "korobka",
    "makro",
    "mem",
    "std-ext",
    "unchecked",
    "void",
    "wide_ptr",
    "zvec"
]

async = ["futures"]
async-astd = ["async-std"]
async-pollster = ["pollster"]
async-tokio = ["tokio"]
defer = []
either = []
korobka = []
makro = []
mem = []
std-ext = []
unchecked = []
void = []
wide_ptr = []
zvec = []
