[package]
name = "xjbutil"
version = "0.8.0-ALFA"
edition = "2018"
authors = ["ICEY <icey@icey.tech>"]
description = "A xjbly created utility library for my own use"
readme = "./README.md"
repository = "https://github.com/Pr47/xjbutil"
license = "MIT"

[dependencies]
unchecked_unwrap = "3"

async-std = { optional = true, version = "1" }
futures = { optional = true, version = "0.3", default-features = false, features = ["alloc"] }
monoio = { optional = true, version = "0.0.3", default-features = false }
pollster = { optional = true, version = "0.2" }
serde = { optional = true, version = "1" }
tokio = { optional = true, version = "1", features = ["rt", "sync", "time"] }

[features]
default = ["enable-commons", "async-tokio"]

enable-commons = [
    "async",
    "defer",
    "display2",
    "either",
    "flexible-array",
    "makro",
    "mem",
    "std-ext",
    "strict-sound",
    "unchecked",
    "value",
    "value-serde"
]

enable-all = [
    "async",
    "defer",
    "display2",
    "either",
    "flexible-array",
    "korobka",
    "liberty",
    "makro",
    "mem",
    "minhttpd",
    "typed-arena",
    "slice-arena",
    "std-ext",
    "unchecked",
    "value",
    "value-serde",
    "void",
    "wide_ptr",
    "zvec"
]

async = ["futures"]
async-astd = ["async-std"]
async-pollster = ["pollster"]
async-monoio = ["monoio"]
async-tokio = ["tokio"]
defer = []
display2 = []
either = []
flexible-array = []
korobka = []
liberty = []
makro = []
mem = []
minhttpd = []
rand = []
typed-arena = []
slice-arena = []
std-ext = []
strict-sound = []
unchecked = []
value = []
value-serde = ["serde"]
void = []
wide_ptr = []
zvec = []
